--- a/index.html
+++ b/index.html
@@ -4,37 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo list</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="#">
 </head>
 <body>
-    <div class="none">
-        <h1>Заголовок 1</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi fugiat pariatur delectus quibusdam suscipit nostrum nesciunt doloremque tempora adipisci asperiores molestiae assumenda placeat, fuga ad? At aliquid est modi.</p>
-        <h2>Заголовок 2</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, dolores tempora. Doloribus voluptates nihil ratione quisquam ullam aspernatur. Quos id, quas assumenda iusto nisi reprehenderit tempore laboriosam sit vel eos.</p>
-        <h3>Заголовок 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, neque, laborum veniam velit delectus vitae obcaecati fugiat nihil facilis, modi praesentium ad officiis similique nostrum optio aperiam recusandae! Pariatur, autem!</p>
+<div class="simple-todo">
+    <div class="tasks-wrapper">
+        <h2>Список задач</h2>
+        <ul id="todo-list">
+            <li>Посмотреть вебинар</li>
+            <li>Написать конспект</li>
+            <li>Повторить код с урока</li>
+        </ul>
     </div>
-    <div class="none">
-        <img id="logo" src="./img/js.png" alt="Логотип">
-        <br>
-        <input id="button" type="submit" value="Кнопка">
-    </div>
-
-    <div class="none">
-        <form action="">
-            <input type="text" class="input-text" id="input-text">
-            <div class="text-block" id="text-block">
-                <p></p>
-            </div>
-        </form>
-    </div>
-
-<div class="dom-example">
-    <h2>Создание и копирование элементов</h2>
-    <div id="elementsContainer"></div>
+    <form id="todo-form">
+        <input id="todo-input" type="text" placeholder="Введите название задачи">
+        <button type="submit">Добавить задачу</button>
+    </form>
 </div>
     <script src="./main.js"></script>
 </body>
