--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="shortcut icon" href="#">
 </head>
 <body>
-<div class="simple-todo">
+<div id="simple-todo">
+    <div id="btnCenter" >-</div>
     <div class="tasks-wrapper">
         <div id="head"><h2>Список задач</h2></div>
         <div id="list"><ul id="todo-list"></ul></div>
     </div>
-<form id="todo-form">
+    <form id="todo-form">
         <button id="add" type="submit">+</button>
-        <input id="todo-input" type="text" placeholder="    Введите название задачи">
-        
+        <input id="todo-input" type="text" placeholder="    Введите название задачи"> 
     </form>
 </div>
     <script src="./main.js"></script>
