--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="btnCenter" >-</div>
     <div class="tasks-wrapper">
         <div id="head"><h2>Список задач</h2></div>
-        <div id="list"><ul id="todo-list"></ul></div>
+        <div id="list">
+            <ul id="todo-list"></ul>
+        </div>
     </div>
     <form id="todo-form">
         <button id="add" type="submit">+</button>
