--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
     </div>
     <form id="todo-form">
-        <button id="add" type="submit">+</button>
-        <input id="todo-input" type="text" placeholder="    Введите название задачи"> 
+        <div class="add-button" id="add">+</div>
+        <div id="todo-input" contentEditable=true data-text="Введите название задачи"> 
     </form>
 </div>
     <script src="./main.js"></script>
