--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <form id="todo-form">
         <div class="add-button" id="add">+</div>
-        <div id="todo-input" contentEditable=true data-text="Введите название задачи"> 
+        <div id="todo-input" contentEditable=true data-placeholder="Введите название задачи"></div>
     </form>
 </div>
     <script src="./main.js"></script>
